--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="tg://resolve?domain=boltbacker">Updates</a></li>
           <li><a class="nav-link scrollto" href="docs.html">Docs</a></li>
+        <li><a class="nav-link scrollto" href="chatbot.html">Chatbot</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
