--- a/chatbot.html
+++ b/chatbot.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 <link href="assets/img/merissa.png" rel="icon" />
-<title>Merissa Robot</title>
+<title>Merissa-Chatbot</title>
 <meta name="description" content="Your ThemeForest item Name and description">
 <meta name="author" content="harnishdesign.net">
 <link rel="stylesheet" type="text/css" href="docs/vendor/bootstrap/css/bootstrap.min.css" />
@@ -34,7 +34,7 @@
 		
 		<!-- Logo --> 
         <a class="logo ml-md-3" href="index.html" title="Merissa - Docs"> <img src="assets/img/Merissa-small.png" alt="docs Template"/> </a> 
-		<span class="text-2 text-light ml-2">v1.0</span> 
+		<span class="text-2 text-light ml-2">Merissa-Chatbot</span> 
         <!-- Logo End -->
         
 		<!-- Navbar Toggler -->
