--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="chatbot.html">Chatbot</a></li>
+          <li><a class="nav-link scrollto" href="docs.html">Docs</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="tg://resolve?domain=boltbacker">Updates</a></li>
-          <li><a class="nav-link scrollto" href="docs.html">Docs</a></li>
-        <li><a class="nav-link scrollto" href="chatbot.html">Chatbot</a></li>
+          <li><a class="nav-link scrollto" href="tg://resolve?domain=MerissaxUpdates">Updates</a></li>
+          <li><a class="nav-link scrollto" href="tg://resolve?domain=MerissaxSupport">Support</a></li>                  
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
