--- a/api.html
+++ b/api.html
@@ -21,7 +21,7 @@
 <body>
     <div class="text">
         <div class="status">
-            <p>API STATUS: <span class="typed-text"></span><span class="cursor typing"></span></p>
+            <p>API STATUS: <span class="typed-text"></span><span class="cursor typing">Online</span></p>
         </div>
         <hr>
         <div class="readdocs">
